--- a/package.json
+++ b/package.json
@@ -21,7 +21,11 @@
     "react-native-screens": "~2.9.0",
     "react-native-unimodules": "~0.10.1",
     "react-native-web": "~0.11.7",
-    "react-navigation": "2.0.1"
+    "react-navigation": "2.0.1",
+    "react-redux": "5.0.7",
+    "redux": "4.0.0",
+    "redux-logger": "3.0.6",
+    "redux-thunk": "2.2.0"
   },
   "devDependencies": {
     "@babel/core": "~7.9.0",
