--- a/package.json
+++ b/package.json
@@ -8,12 +8,16 @@
     "test": "jest"
   },
   "dependencies": {
+    "@react-native-community/datetimepicker": "^3.0.1",
     "expo": "~38.0.9",
+    "expo-notifications": "~0.3.3",
+    "expo-permissions": "~9.0.1",
     "expo-secure-store": "~9.0.1",
     "expo-splash-screen": "0.3.1",
     "expo-status-bar": "^1.0.0",
     "expo-updates": "~0.2.10",
     "fetch": "^1.1.0",
+    "moment": "^2.27.0",
     "react": "~16.11.0",
     "react-dom": "~16.11.0",
     "react-native": "~0.62.2",
