--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   "dependencies": {
     "@react-native-community/datetimepicker": "^3.0.1",
     "expo": "~38.0.9",
+    "expo-mail-composer": "~8.2.1",
     "expo-notifications": "~0.3.3",
     "expo-permissions": "~9.0.1",
     "expo-secure-store": "~9.0.1",
