--- a/package.json
+++ b/package.json
@@ -10,6 +10,9 @@
   "dependencies": {
     "@react-native-community/datetimepicker": "^3.0.1",
     "expo": "~38.0.9",
+    "expo-asset": "~8.1.7",
+    "expo-image-manipulator": "~8.2.1",
+    "expo-image-picker": "~8.3.0",
     "expo-mail-composer": "~8.2.1",
     "expo-notifications": "~0.3.3",
     "expo-permissions": "~9.0.1",
